--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  margin: auto;
 }
 
 .saveBtn i:hover {
@@ -74,4 +75,8 @@ textarea {
 .headRow {
   background-color: #000000;
   color:white;
+}
+
+button > * {
+  pointer-events: none;
 }
